# transcript-analysis-sys

./: .gitignore  README.md  Score-analysis-prompts.txt  pyproject.toml
ai-recording/53660366/: original.txt
ai-recording/61229671/: original.txt
ai-recording/61618976/: original.txt
ai-recording/64018715/: original.txt
ai-recording/64081538/: original.txt
ai-recording/66806263/: original.txt
ai-recording/67775055/: original.txt
ai-recording/69720218/: original.txt
ai-recording/92710229/: original.txt
ai-recording/98107680/: original.txt
src/transcript_analysis_sys/: rest_api.py  run.py
src/transcript_analysis_sys/config/: __init__.py  settings.yml
src/transcript_analysis_sys/example/: transcribed.py
src/transcript_analysis_sys/services/: gpts.py  groq.py
src/transcript_analysis_sys/storages/: local.py
src/transcript_analysis_sys/utils/: constant.py  log.py  message.py  stt.py  tokens.py  utils.py
